<resources>

    <!-- General -->
    <string name="app_name">Shiftly</string>
    <string name="welcome_msg">Welcome to</string>
    <string name="user_img">User</string>
    <string name="continue_text">CONTINUE</string>
    <string name="about_toolbar_txt">About</string>
    <string name="apply_text">Apply</string>
    <string name="skip_text">Skip</string>
    <string name="configure_text">Configure</string>
    <string name="recommend_landscape">Rotate your screen for better visibility</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="not_available">N/A</string>

    <!-- Signup and Login -->
    <string name="signup_img">Signup</string>
    <string name="email_edittext_hint">EMAIL ADDRESS</string>
    <string name="password_edittext_hint">PASSWORD</string>
    <string name="login_txt">LOGIN</string>
    <string name="signup_txt">SIGN UP</string>
    <string name="forgot_password_txt">Forgot Password\u0020</string>
    <string name="new_txt">New to our app?  Sign Up</string>
    <string name="signup_header">Register your new\n Shiftly account.</string>
    <string name="firstname_edittext_hint">FIRST NAME</string>
    <string name="lastname_edittext_hint">LAST NAME</string>
    <string name="confirm_password_edittext_hint">CONFIRM PASSWORD</string>
    <string name="login_clock_animation_alpha">0.075</string>

    <string name="err_firstname">Please enter a vaild name</string>
    <string name="err_lastname">Please enter a valid name</string>
    <string name="err_email">Please enter a vaild mail address</string>
    <string name="err_password">Invalid Password (No spaces allowed. Minimum length: 6) </string>
    <string name="err_password_confirmation">Password does not match</string>
    <string name="err_login_password">Please enter a valid password</string>
    <string name="err_login_email">Please enter a vaild mail address</string>
    <string name="err_invalid_email">Error: Email does  not exist!</string>
    <string name="err_invalid_email_2">Error: Invalid Email format</string>
    <string name="err_invalid_pass">Error: Invalid Password.</string>
    <string name="err_login_attempts">Error: Too many logins attempts.</string>

    <string name="login_success">Loggged in Successfully!</string>
    <string name="web_client_id">660636259153-pv59b1cou8cindonlkh7k4fuajk21anp.apps.googleusercontent.com</string>
    <string name="facebook_app_id">479690842852700</string>
    <string name="fb_login_protocol_scheme">fb479690842852700</string>
    <string name="facebook_button_txt">Login</string>
    <string name="sign_in_with">Sign In with:</string>

    <string name="login_err_password">Please type in a Password</string>
    <string name="reset_pass_text">Password reset will be sent to:\u0020</string>
    <string name="reset_pass_title">Password Reset</string>
    <string name="reset_email_sent">Password reset mail sent successfully.</string>
    <string name="account_created">Account created! Logging you in…</string>

    <string name="google_login_button">Google login button</string>
    <string name="facebook_login_button">Facebook login button</string>

    <!-- GroupCreation -->
    <string name="group_create">Create</string>
    <string name="group_create_label">Create a new Group</string>
    <string name="group_edit_label">Edit Group</string>
    <string name="group_create_succeed">%1$s was created successfully! </string>
    <string name="group_share_hint">Share this code with your Employees\n so they can join the group: </string>
    <string name="options_configure">Configure Options</string>
    <string name="shift_number_title">Shift number:</string>
    <string name="fill_options_text">To proceed, please choose general settings for your shifts</string>
    <string name="group_pic_create_hint">Now, upload your Group picture:</string>
    <string name="group_pic_edit_hint">Upload a new group picture:</string>
    <string name="group_name_create_hint">First, name your Group:</string>
    <string name="group_name_edit_hint">Edit your group name:</string>
    <string name="group_name_edittext_hint">GROUP NAME</string>
    <string name="err_groupname">Invalid group name!</string>
    <string name="group_create_tooltip">Click here to create a group</string>

    <!-- Calendar -->
    <string name="title_activity_schedule_view">View schedules</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="agenda">Agenda</string>
    <string name="daily_label">Daily schedule</string>
    <string name="weekly_label">Weekly schedule</string>
    <string name="agenda_label">Agenda</string>

    <!-- Group lists -->
    <string name="groups_i_belong">GROUPS I BELONG</string>
    <string name="groups_i_manage">GROUPS I MANAGE</string>
    <string name="groups_empty_belong">You have yet to join a group.</string>
    <string name="groups_empty_manage">You have yet to create a group.</string>
    <string name="members">members</string>
    <string name="schedule_generated">A new schedule has been generated!</string>
    <string name="confirm_schedule">Confirm</string>

    <!-- About -->
    <string name="title_contact_us">Contact us:</string>
    <string name="contact_us_email">course236503@gmail.com</string>
    <string name="credits_title">Credits:</string>
    <string name="options_toolbar_text">Configure Options</string>
    <string name="group_num_days_hint">Number of days in a week:</string>
    <string name="group_num_shifts_hint">Number of shifts per day:</string>
    <string name="group_num_employees_hint">Number of employees per shift:</string>
    <string name="menu">MENU</string>
    <string name="done_text">Done</string>

    <!-- Group join -->
    <string name="join_group_hint">Enter group ID below:</string>
    <string name="join_group_edittext_hint">GROUP ID</string>
    <string name="err_groupid">Invalid ID format</string>
    <string name="group_join_label">Join a Group</string>
    <string name="err_group_doesnt_exist">The group does not exist</string>
    <string name="err_group_already_exist">You are already a member of this group.</string>
    <string name="group_join_success">You successfully joined the group!</string>
    <string name="continue_text_group_creation_2">Continue</string>
    <string name="group_join_tooltip">Click here to join a group</string>

    <!-- Share group code -->
    <string name="message1_share_group_code" type="id">You have been invited to join the group</string>
    <string name="message2_share_group_code" type="id">in Shiftly!\nJoin the group with the following code:</string>
    <string name="message3_share_group_code" type="id">Download Shiftly from here:
        https://play.google.com/store/apps/details?id=com.technion.shiftlyapp.shiftly
    </string>
    <string name="email_subject_message_share_group_code">Shiftly - Group Invitation</string>
    <string name="remember_checkbox">Remember me</string>
    <string name="schedule_no_options">Not all options were filled!</string>
    <string name="view_options_no_options">No options are available!</string>
    <string name="schedule_generation_success">Schedule generated successfully!</string>
    <string name="schedule_generation_error">A full schedule could not be created!</string>
    <string name="starting_hour_hint">Starting hour of working day:</string>
    <string name="shift_len_hint">Length of each shift (in hours):</string>
    <string name="err_user_is_admin">You cannot join your own group!</string>
    <string name="copy_group_code_text">Group code was copied to Clipboard!</string>
    <string name="options_updated_text">Your options were recorded successfully!</string>

    <string name="options_tooltip">Submit your options</string>
    <string name="generate_schedule_tooltip">Generate Schedule</string>
    <string name="copy_to_clipboard_tooltip">Copy</string>

    <string name="no_email_app">No email app is installed</string>

    <!-- View Options -->
    <string name="options_view_toolbar_text">View Sent Options</string>
    <string name="hour_format">%s:00 - %s:00</string>
    <string name="options_view_title">Options sent by the members of %s</string>
    <string name="options_view_subtitle">The following members are yet to send options this week:</string>

    <!-- Group Deletion -->
    <string name="edit_delete_group_dialog">Choose an action:</string>
    <string name="delete_group_tooltip">Long click here to edit or delete the group</string>
    <string name="delete_user_dialog">Are you sure you want to delete your account?</string>
    <string name="user_deletion_error">Delete all the groups you manage first</string>
    <string name="generate_schedule_dialog">Are you sure you want to generate a new schedule? Your current schedule will get deleted</string>
    <string name="flexibility_graph">Flexibility of employees</string>
    <string name="view_options_tooltip">View Options</string>

    <!-- Drawer -->
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>

    <!-- Account update -->
    <string name="user_update_header">Update your account.</string>
    <string name="user_update_txt">UPDATE</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="account_updated">Account details updated!</string>
    <string name="edit_group">Edit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="group_edit_success">Group edited successfully!</string>
    <string name="edit_pic_error">Could not upload picture</string>
    <string name="privacy_policy_title">Privacy policy:</string>
    <string name="privacy_policy"><a href="https://github.com/shiftlyapp/Shiftly/wiki/Privacy-Policy">Shiftly Privacy Policy</a></string>
    <string name="start_time">Start:</string>
    <string name="end_time">End:</string>

    <!-- Week days -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- Agenda -->
    <string name="agenda_no_shifts_message">No upcoming shifts</string>

    <!-- Schedule View -->
    <string name="copy_group_code">Copy Group Code</string>

    <!-- Sharing -->
    <string name="share">Share</string>
    <string name="no_schedule_available">There\'s no schedule available</string>

    <!-- Edit Schedule -->
    <string name="edit_schedule_label">Edit Schedule</string>
    <string name="edit_schedule_tooltip">Tap employee name to change it</string>
    <string name="schedule_updated_text">The schedule was updated successfully!</string>


</resources>