<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        <item
            android:id="@+id/drawer_about_button"
            android:icon="@drawable/ic_drawable_about_24dp"
            android:title="@string/about"
            />
        <item
            android:id="@+id/drawer_edit_user_button"
            android:icon="@drawable/ic_edit_user_24dp"
            android:title="@string/edit_account"
            />
        <item
            android:id="@+id/drawer_delete_user_button"
            android:icon="@drawable/ic_drawable_delete_user_24dp"
            android:title="@string/delete_account"
            />
        <item
            android:id="@+id/drawer_signout_button"
            android:icon="@drawable/ic_drawable_key_24dp"
            android:title="@string/sign_out" />
</menu>