<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anim_bg"
    android:focusableInTouchMode="true"
    tools:context=".SignupActivity"
    android:id="@+id/signup_cl"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/signup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/signup_header"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/signup_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/signup_img"
        android:src="@drawable/signup_symbol"
        app:layout_constraintBottom_toTopOf="@+id/signup_firstname_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_header" />

    <EditText
        android:id="@+id/signup_firstname_edittext"
        style="@style/CustomEditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="true"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/baseline_person_pin_black_24"
        android:drawableRight="@drawable/baseline_person_pin_black_24"
        android:ems="10"
        android:hint="@string/firstname_edittext_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/signup_lastname_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_pic"
        tools:targetApi="O" />

    <EditText
        android:id="@+id/signup_lastname_edittext"
        style="@style/CustomEditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="true"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/baseline_person_pin_black_24"
        android:drawableRight="@drawable/baseline_person_pin_black_24"
        android:ems="10"
        android:hint="@string/lastname_edittext_hint"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/signup_email_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_firstname_edittext"
        tools:targetApi="O" />

    <EditText
        android:id="@+id/signup_email_edittext"
        style="@style/CustomEditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="true"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/baseline_alternate_email_black_24"
        android:drawableRight="@drawable/baseline_alternate_email_black_24"
        android:ems="10"
        android:hint="@string/email_edittext_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/signup_password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_lastname_edittext"
        tools:targetApi="O" />

    <EditText
        android:id="@+id/signup_password_edittext"
        style="@style/CustomEditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="false"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/baseline_lock_black_24"
        android:drawableRight="@drawable/baseline_lock_black_24"
        android:ems="10"
        android:hint="@string/password_edittext_hint"
        android:inputType="textPassword"
        android:maxLength="@integer/pass_max_length"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/signup_confirm_password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_edittext"
        tools:targetApi="O" />

    <EditText
        android:id="@+id/signup_confirm_password_edittext"
        style="@style/CustomEditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="17dp"
        android:autofillHints="false"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/baseline_lock_black_24"
        android:drawableRight="@drawable/baseline_lock_black_24"
        android:ems="10"
        android:hint="@string/confirm_password_edittext_hint"
        android:inputType="textPassword"
        android:maxLength="@integer/pass_max_length"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_edittext"
        tools:targetApi="O" />

    <Button
        android:id="@+id/signup_button"
        style="@style/CustomButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:drawableStart="@drawable/round_arrow_forward_ios_white_18"
        android:drawableLeft="@drawable/round_arrow_forward_ios_white_18"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:text="@string/signup_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_edittext" />

</android.support.constraint.ConstraintLayout>